2004-11-15 Martin Quinson
  - Port to ARM. Simply added the alignment and size descriptions. Should
    work, but the ARM machines are so slow that I didn't had the opportunity
    to 'make check' overthere yet.

2004-11-15 Arnaud Legrand
  - Trace manager now written. It uses a heap structure and is therefore
    expected to be efficient. It may however be speeded up (particularly
    when many events occur at the same date) by using red and black
    trees. One day maybe... 
  - Max-min linear system solver written. It uses a sparse matrix
    structure taking advantage of its expected use. Most operations are
    O(1) and free/calloc are called as few as possible. The computation of
    the minimum could however be improved by using a red and black tree
    (again ! ;).

2004-11-03 Arnaud Legrand
  - Rename every gras_* function that was in xbt/ to its xbt_
    counterpart.
  - Add a heap and a doubly-linked list to xbt
  - Added a dichotomy to the dictionnaries. make check works as well before
    so I assume that the patch is correct. I do not know however if things
    run effectively faster than before now. :)

2004-10-29 Martin Quinson
  - Introduction of the remote errors. 
    They are the result of a RMI/RPC on the remote machine.
    ErrCodes being scalar values, you can't get the host on which those
    errors did happen. Extending the error mecanism as in Gnome is possible.
    No idea yet whether it is a good idea.
    
2004-10-28 Martin Quinson
  - Interface revolution: the Starred Structure Eradication.
    I used to do typedef struct {} toto_t; and then handle *toto_t.
    Arnaud (and Oli) didn't like it, and I surrendered. Now, you have:
      - ???_t is a valid type (builded with typedef)
      - s_toto_t is a structure (access to fields with .)
      - s_toto   is a structure needing 'struct' keyword to be used
      - e_toto_t is an enum
      -   toto_t is an 'object' (struct*)
    Exemple:
      typedef struct s_toto {} s_toto_t, *toto_t;